# DolphinDBPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Documentation_Guidelines_CN.md  LICENSE  README.md  README_CN.md  README_WIN.md  README_WIN_CN.md  build.sh  buildSetup.cmake  build_util.sh  template.bat  template.cmake
AWSS3/: CMakeLists.txt  PluginAWSS3.txt  PluginAWSS3_win.txt  linux.CMakeLists.txt
AWSS3/src/: AWSS3.cpp
EncoderDecoder/: CMakeLists.txt  PluginEncoderDecoder.txt  README.md  README_CN.md  Third_Party_Software_License  build.sh
EncoderDecoder/src/: CoderBase.cpp  CoderBase.h  EncoderDecoder.cpp  EncoderDecoder.h  jsonUtil.cpp  jsonUtil.h  protobufUtil.cpp  protobufUtil.h
HBase/: CMakeLists.txt  PluginHBase.txt  Third_Party_Software_License
HBase/src/: PluginHbase.cpp
MatchingEngine/: CMakeLists.txt  CMakeLists.win.txt  Config.h  Exchange.cpp  Exchange.h  PluginMatchingEngine.txt  PluginMatchingEngine_win.txt  README.md  export.h  test.txt
MatchingEngine/book/: callback.h  comparable_price.h  depth.h  depth_constants.h  depth_level.h  depth_order_book.h  license.txt  listener.h  logger.h  order.h  order_book.h  order_tracker.h  test.cpp  types.h
MatchingEngine/src/: BookEverything.h  CMakeLists.txt  Config.h  DolphinDBEverything.h  Exchange.cpp  Exchange.h  export.h
MatchingEngine/test/: test_matchingengine.txt
amdQuote/: CHANGELOG.md  CMakeLists.txt  PluginAmdQuote.txt  PluginAmdQuote3.9.6.txt  README.md  README_CN.md  build.sh
amdQuote/include/: ama.h  ama_datatype.h  ama_export.h  ama_struct.h  ama_tools.h
amdQuote/lib/: PluginAmdQuote.txt
amdQuote/src/: amdQuote.cpp  amdQuote.h  amdQuoteImp.cpp  amdQuoteImp.h  amdQuoteType.cpp  amdQuoteType.h  amdSpiImp.cpp  amdSpiImp.h  amdTest.cpp
amdQuote/test/: getStausTest.dos  test.dos
arrow/: .gitignore  CMakeLists.txt  PluginArrow.txt  PluginArrow.txt.win  README.md  build.sh
arrow/include/: DolphinDBEverything.h
arrow/src/: FormatArrow.cpp  FormatArrow.h
aws/: .gitignore  CMakeLists.txt  PluginAWS.txt  PluginAWSS3.txt  PluginAWSS3_win.txt  PluginAWS_win.txt  README.md  README_CHN.md  README_CN.md  README_EN.md  README_ENG.md  build.sh
aws/AWSS3/: README.md  build_840.py
aws/src/: AWSS3.cpp  AWSS3.h  CMakeLists.txt
feather/: CHANGELOG.md  CMakeLists.txt  PluginFeather.txt  PluginFeather_win.txt  README.md  README_CN.md  README_EN.md  Third_Party_Software_License  build.sh  rebuild.sh
feather/src/: feather.cpp  feather.h
feather/test/: arrow_make.py  feather_ddb_save  feather_simple  feather_single  feather_verify  float_non.py  null_make.py  pandas_make.py  read_write.py  verify.py
formatArrow/: CMakeLists.txt  PluginFormatArrow.txt  PluginFormatArrow.txt.win  README.md  README_CN.md
formatArrow/src/: FormatArrow.cpp  FormatArrow.h
gp/: .gitignore  CHANGERLOG.md  CMakeLists.txt  PluginGp.txt  README.md  build.sh
gp/dolphindbGnuplot/: Makefile  Makefile.in  aclocal.m4  config.h  config.hin  config.status  configure
gp/src/: gp.cpp  gp.h
gp/test/: gp_test.txt
gurobi/: CMakeLists.txt  PluginGurobi.txt  README.md  build.sh
gurobi/src/: GurobiPlugin.cpp  GurobiPlugin.h
hbase/: CMakeLists.txt  PluginHBase.txt  README.md  README_CN.md  build.sh
hbase/HBase/: PluginHBase.txt
hbase/src/: PluginHbase.cpp  PluginHbase.h
hdf5/: CHANGELOG.md  CMakeLists.txt  CMakeLists_win.txt  Makefile  PluginHdf5.txt  PluginHdf5_win.txt  README.md  README_CN.md  README_ENG.md  Third_Party_Software_License  build.sh
hdf5/h5file/: SDScompound.h5  array_mdatom.h5  compound.h5  float.h5  named_type.h5  smpl_enum.h5  smpl_numeric.h5  timestamp.h5  transform.h5  vlen_str.h5
hdf5/include_win/: H5Epubgen.h
hdf5/src/: hdf5_plugin.cpp  hdf5_plugin.h  hdf5_plugin_endian.cpp  (+10 more)
hdfs/: CHANGELOG.md  CMakeLists.txt  PluginHdfs.txt  README.md  README_CN.md  build.sh
httpClient/: CMakeLists.txt  CMakeLists_win.txt  Makefile  Makefile.win  PluginHttpClient.txt  PluginHttpClient_win.txt  README.md  README_EN.md  arm_build.sh  build.sh  httpClient.version
insight/: CHANGELOG.md  CMakeLists.txt  PluginInsight.txt  README.md  README_CN.md  build.sh
kafka/: CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.shared  CMakeLists_old.txt  ConstantMarshall.h  PluginKafka.txt  README.md  README_CN.md  Third_Party_Software_License  arm_build.sh  client.cpp  client.h  plugin_kafka.cpp  plugin_kafka.h  rebuild.sh
kdb/: .gitignore  CMakeLists.txt  CMake_mingw+vcpkg.md  PluginKDB.txt  PluginKDB.txt.inc  PluginKDB_WIN32.txt  README.md  README_CN.md  Third_Party_Software_License  build.sh  rebuild.sh  win_build.sh
mat/: .gitignore  CHANGELOG.md  CMakeLists.txt  PluginMat.txt  PluginMat_win32.txt  README.md  README_EN.md  build.sh  copyFile.bat  winLib.txt
mongodb/: CMakeLists.txt  CMakeLists2.txt  Makefile  PluginMongodb.txt  PluginMongodb_win32.txt  README.md  README_CN.md  README_EN.md  build.sh
mqtt/: CHANGELOG.md  CMakeLists.txt  PluginMQTT.txt  PluginMQTTClient.txt  PluginMQTTClient_WIN32.txt  PluginMQTT_WIN32.txt  README.md  README_CN.md  Third_Party_Software_License  build.sh
mseed/: CHANGELOG.md  CMakeLists.txt  PluginMseed.txt  PluginMseed_win32.txt  README.md  README_CN.md  build.sh
mysql/: CHANGELOG.md  CMakeLists.txt  PluginMySQL.txt  PluginMySQL_win32.txt  README.md  README_CN.md  build.sh  mysql_CMakeLists.txt  winbuild.sh  yandex_license
mysqlPlugin/: CMakeLists.txt  README.md
nsq/: CMakeLists.txt  PluginNsq.txt  PluginNsq_win.txt  README.md  README_CN.md  build.sh  nsq_script.txt  sdk_config.ini
odbc/: CHANGELOG.md  CMakeLists.txt  DolphinDBODBC.txt  Makefile  PluginODBC.txt  PluginODBC_win.txt  README.md  README_CN.md  Third_Party_Software_License  build.bat  build.sh  myodbcTutorial.txt  odbc.cfg  postgresqlTutorial.txt  rebuild.sh  winbuild.sh
opc/: CMakeLists.txt  PluginOpc.txt  README.md  README_CN.md
opcua/: CHANGELOG.md  CMakeLists.txt  CMakeLists_win.txt  PluginOPCUA.txt  PluginOPCUA_win.txt  README.md  README_CN.md  Third_Party_Software_License
orc/: CHANGELOG.md  CMakeLists.txt  PluginOrc.txt  README.md  README_CN.md  Third_Party_Software_License
(+1285 files in other folders)
